add server username to the client

--- a/templates/client.html
+++ b/templates/client.html
@@ -175,6 +175,7 @@
     <script>
         let socket = null;
         let isConnected = false;
+        let serverUsername = 'Serveur';
         const messageInput = document.getElementById('message-input');
         const messagesContainer = document.getElementById('messages');
 
@@ -231,8 +232,15 @@
                 addSystemMessage('Erreur: ' + data.message);
             });
 
+            socket.on('server_info', (data) => {
+                if (data.server_username) {
+                    serverUsername = data.server_username;
+                    addSystemMessage(`Nom du serveur: ${serverUsername}`);
+                }
+            });
+
             socket.on('message_received', (data) => {
-                addMessage('Serveur', data.message, 'received');
+                addMessage(serverUsername, data.message, 'received');
             });
 
             socket.on('message_sent', (data) => {
