--- a/templates/server.html
+++ b/templates/server.html
@@ -386,7 +386,7 @@
                 
                 // Si ce client est sélectionné, afficher le message
                 if (selectedClient === data.client_id) {
-                    addMessageToDisplay(serverUsername, data.message, 'sent');
+                    addMessageToDisplay('Vous', data.message, 'sent');
                 }
             });
 
